--- a/areas.html
+++ b/areas.html
@@ -80,6 +80,7 @@
                         <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo" height="100px">
                             <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image" height="100px">
                     </a>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
