--- a/causes.html
+++ b/causes.html
@@ -76,9 +76,11 @@
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo-3.png" class="white-logo" alt="logo">
-                            <img src="assets/img/logo-2.png" class="black-logo" alt="image">
+                            <img src="assets/img/logo.png" class="white-logo" alt="logo">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image">
                         </a>
+                        <span style="color: white; margin-left: 80px;">Springs of Hope</span>
+
 
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav">
