--- a/donate.html
+++ b/donate.html
@@ -77,9 +77,10 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <!-- <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
-                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px"> -->
+                        <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
+                            <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
                     </a>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
