--- a/founder.html
+++ b/founder.html
@@ -488,9 +488,9 @@
                         <div class="col-lg-4 col-md-6">
                             <p>
                                 <i class="far fa-copyright"></i> 
-                                Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope. All Rights Reserved by
+                                Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope
+                                    Springs of Hope for Communities
                                 </a>
                             </p>
                         </div>
