--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo">
                             <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image">
                         </a>
-                        <span style="color: white; margin-left: 80px;">Springs of Hope</span>
+                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -1006,7 +1006,7 @@
                         <div class="col-lg-4">
                             <div class="copyright-logo">
                                 <img src="assets/img/logo.png" alt="logo"><span style="color: white;">Springs of
-                                    Hope</span>
+                                    Hope for Communities</span>
                             </div>
                         </div>
 
@@ -1016,10 +1016,10 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope
+                                    Springs of Hope for Communities
                                 </a>
                             </p>
                         </div>
