--- a/location.html
+++ b/location.html
@@ -42,7 +42,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <title>Locations - Springs of Hope</title>
+    <title>Locations - Springs of Hope for Communities</title>
 
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -80,7 +80,7 @@
                         <img src="assets/img/logo.png" class="white-logo"  style="margin-bottom: 15px;" alt="logo" height="100px">
                             <img src="assets/img/logo.png" class="black-logo"  style="margin-bottom: 15px;" alt="image" height="100px">
                     </a>
-                    <span style="color: white; margin-left: 80px;">Springs of Hope</span>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -579,10 +579,10 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope
+                                    Springs of Hope for Communities
                                 </a>
                             </p>
                         </div>
