--- a/index.html
+++ b/index.html
@@ -343,23 +343,72 @@
     </div>
     <!-- End Sidebar Modal -->
 
+   <!-- Start Home Banner Three Area -->
+   <div class="home-banner-three home-banner-three-video">
+    <video loop="" muted="" autoplay="" poster="#" class="background-video">
+        <source src="assets/img/banner-video.mp4" type="video/mp4">
+    </video>
+    <div class="">
+        <div class="home-item">
+            <div class="d-table">
+                <div class="d-table-cell">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-lg-7">
+                                <div class="main-banner-content">
+                                    <span>Springs of Hope for Communities</span>
+                                    <h4>The world has enough for all of us if we cared for ourselves and for each other.</h4>
+                                    <div class="banner-btn">
+                                        <a href="#" class="default-btn">
+                                            Donate Now
+                                            <i class="flaticon-right"></i>
+                                            <span></span>
+                                        </a>
+                                        <a class="optional-btn" href="#">
+                                            Become Member
+                                            <i class="flaticon-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5">
+                                <div class="banner-bar">
+                                    <div class="banner-video">
+                                        <span>Watch Intro</span>
+                                        <a href="https://www.youtube.com/watch?v=uemObN8_dcw" class="video-btn popup-youtube">
+                                            <i class="bx bx-play"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Home Banner Three Area -->
+
+
     <!-- Start Slider Area -->
-    <div class="slider_area">
+    <!-- <div class="slider_area">
         <div id="rev_slider_1078_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container"
             data-alias="classic4export" data-source="gallery"
-            style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
+            style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;"> -->
             <!-- START REVOLUTION SLIDER 5.4.1 fullwidth mode -->
-            <div id="rev_slider_1078_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
-                <ul>
+            <!-- <div id="rev_slider_1078_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
+                <ul> -->
                     <!-- SLIDE  -->
-                    <li data-index="rs-3049" data-transition="zoomin" data-slotamount="7" data-hideafterloop="0"
+                    <!-- <li data-index="rs-3049" data-transition="zoomin" data-slotamount="7" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
                         data-masterspeed="2000" data-thumb="assets/img/main-banner1.jpg" data-rotate="0"
                         data-saveperformance="off" data-title="First Slide" data-param1="" data-param2="" data-param3=""
                         data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
-                        data-param10="" data-description="">
+                        data-param10="" data-description=""> -->
                         <!-- MAIN IMAGE -->
-                        <img src="assets/img/mathare.png" alt="" data-bgposition="center center" data-kenburns="on"
+                        <!-- <img src="assets/img/mathare.png" alt="" data-bgposition="center center" data-kenburns="on"
                             data-duration="3000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
@@ -399,18 +448,18 @@
                                 <span></span>
                             </a>
                         </div>
-                    </li>
+                    </li> -->
 
                     <!-- SLIDE  -->
-                    <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
+                    <!-- <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
                         data-masterspeed="2000" data-thumb="assets/img/main-banner2.jpg" data-rotate="0"
                         data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
                         data-saveperformance="off" data-title="Second Slide" data-param1="" data-param2=""
                         data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
-                        data-param9="" data-param10="" data-description="">
+                        data-param9="" data-param10="" data-description=""> -->
                         <!-- MAIN IMAGE -->
-                        <img src="assets/img/20221113_145825.jpg" alt="" data-bgposition="center center"
+                        <!-- <img src="assets/img/20221113_145825.jpg" alt="" data-bgposition="center center"
                             data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100"
                             data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500"
                             data-offsetend="0 -500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
@@ -430,9 +479,9 @@
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             Access to the word of God.
-                        </div>
+                        </div> -->
 
-                        <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
+                        <!-- <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
@@ -454,8 +503,9 @@
                 </ul>
                 <div class="tp-bannertimer" style="height: 7px; background-color: rgba(255, 255, 255, 0.25);"></div>
             </div>
-        </div><!-- END REVOLUTION SLIDER -->
-    </div>
+        </div> -->
+        <!-- END REVOLUTION SLIDER -->
+    <!-- </div> -->
     <!-- End Slider Area -->
 
     <!-- Start Testimonials Area -->
