--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo">
                             <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image">
                         </a>
-                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
+                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities ( SHOFCOM )</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -376,7 +376,7 @@
                                 <div class="banner-bar">
                                     <div class="banner-video">
                                         <span>Watch Intro</span>
-                                        <a href="https://www.youtube.com/watch?v=uemObN8_dcw" class="video-btn popup-youtube">
+                                        <a href="https://www.youtube.com/" class="video-btn popup-youtube">
                                             <i class="bx bx-play"></i>
                                         </a>
                                     </div>
