--- a/founder.html
+++ b/founder.html
@@ -315,7 +315,7 @@
                         <h2>The  Founder</h2>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li>The Founder Springs of Hope for Communities</li>
+                            <li>The Founder Springs of Hope for Communities (SHOFCOM)</li>
                         </ul>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                                 The founder, Reverend Johnson Wambua is an ordained minister of the Gospel and serves as the Pastor In-charge of AIC Zion church in Mathare slums, Nairobi Kenya. Growing up back in kathonzweni of Makueni County, the seed of evangelism would germinate very early in his life when he served in his home church in the twin roles of a Sunday school teacher and youth leader. Coming from an arid and semi-arid area characterized by deprivation and drought, he would be moved by the struggle for livelihood encountered by his community. It’s these dire experiences which would inform his resolve to endeavor to seek for solutions to the challenges faced by his community. 
                                 The chapter on his early life would not be complete without mention of his intervals of stay at Lake Magadi where he would occasionally visit his father who used to work as a truck driver. From these occasional visits, Rev. Wambua would deeply connect with the Masai community after picking interest in their culture and traditions (pastoralism, nomadic way of life, female circumcision and marriage of under-age girls). On the flip-side, the community’s Commitment to this culture has resulted to their marginalization as result of low learner enrolment in schools as young boys are turned into herders and girls offered by their parents into early marriage after undergoing female genital mutilation (FGM). 
                                 It’s this experience with the Masai community which would consolidate his earlier resolve to dedicate his life to work towards aligning marginalized communities on the pathway to adopt Christianity, education and civilized ways of life. And when the calling to the higher purpose became irresistible, he would leave his well-paid job with the National Social security protection fund to enroll for training in theology which culminated into his ordination and appointment as a pastor in various Districts of the African Inland Church. And as fate would have it, Rev.Johnson Wambua was posted to serve as a pastor at AIC ZION within the populous and crime infested Mathare slums in Nairobi, Kenya. Here he came face-to-face to deplorable living conditions for families living in the second largest slum in Kenya. 
-                                To take his calling to the homestretch and based on the earlier convictions, the SPRINGS OF HOPE for COMMUNITIES (SHOFCOM) whose long term objective is to transform the lives of the Masai’s and slum families was borne. 
+                                To take his calling to the homestretch and based on the earlier convictions, the SPRINGS OF HOPE for COMMUNITIES (SHOFCOM) (SHOFCOM) whose long term objective is to transform the lives of the Masai’s and slum families was borne. 
                             </p>
                          
                             <!-- <blockquote class="wp-block-quote">
@@ -488,9 +488,9 @@
                         <div class="col-lg-4 col-md-6">
                             <p>
                                 <i class="far fa-copyright"></i> 
-                                Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights Reserved by
+                                Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities (SHOFCOM). All Rights Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope for Communities
+                                    Springs of Hope for Communities (SHOFCOM)
                                 </a>
                             </p>
                         </div>
