--- a/our_story.html
+++ b/our_story.html
@@ -686,9 +686,9 @@ Above all, we are ministry centered; besides working to transform our beneficiar
                             <div class="col-lg-4 col-md-6">
                                 <p>
                                     <i class="far fa-copyright"></i> 
-                                    Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights Reserved by
+                                    Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities (SHOFCOM). All Rights Reserved by
                                     <a href="#" target="_blank">
-                                        Springs of Hope for Communities
+                                        Springs of Hope for Communities (SHOFCOM)
                                     </a>
                                 </p>
                             </div>
