--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
                         <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
                                 <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
                     </a>
-                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -1129,10 +1129,10 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities (SHOFCOM). All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope for Communities
+                                    Springs of Hope for Communities (SHOFCOM)
                                 </a>
                             </p>
                         </div>
