--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <!-- Responsive CSS -->
 		<link rel="stylesheet" href="assets/css/responsive.css">
 		
-		<title>Contact Us -  Springs of Hope for Communities</title>
+		<title>Contact Us -  Springs of Hope for Communities (SHOFCOM)</title>
 
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
     </head>
@@ -79,7 +79,7 @@
                             <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
                             <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
                         </a>
-                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
+                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav">
@@ -535,9 +535,9 @@
                             <div class="col-lg-4 col-md-6">
                                 <p>
                                     <i class="far fa-copyright"></i> 
-                                    Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights Reserved by
+                                    Copyright @<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities (SHOFCOM). All Rights Reserved by
                                     <a href="#" target="_blank">
-                                        Springs of Hope for Communities
+                                        Springs of Hope for Communities (SHOFCOM)
                                     </a>
                                 </p>
                             </div>
