--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-7">
                                 <div class="main-banner-content">
-                                    <span>Springs of Hope for Communities</span>
+                                    <span>Springs of Hope for Communities (SHOFCOM)</span>
                                     <h4>The world has enough for all of us if we cared for ourselves and for each other.</h4>
                                     <div class="banner-btn">
                                         <a href="#" class="default-btn">
@@ -514,7 +514,7 @@
             <div class="section-title">
                 <span>
                     <i class="flaticon-testimonial"></i>
-                    ANNEXES
+                    CONCEPT INSPIRATION
                 </span>
                 <h2>The foundation concept is inspired by two heart touching stories :</h2>
             </div>
