--- a/support_area.html
+++ b/support_area.html
@@ -42,7 +42,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <title>Areas of Support - Springs of Hope for Communities</title>
+    <title>Areas of Support - Springs of Hope for Communities (SHOFCOM)</title>
 
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
@@ -80,7 +80,7 @@
                         <img src="assets/img/logo.png" class="white-logo" alt="logo" height="100px">
                             <img src="assets/img/logo.png" class="black-logo" alt="image" height="100px">
                     </a>
-                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities</span>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities (SHOFCOM)</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -333,7 +333,7 @@
                     SUPPORT
                 </span>
                 <h2>Lend A Helping Hand</h2>
-                <p>At Springs of Hope for Communities , we are open for support in any of the below areas.</p>
+                <p>At Springs of Hope for Communities (SHOFCOM) , we are open for support in any of the below areas.</p>
             </div>
 
             <div class="row">
@@ -469,10 +469,10 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities (SHOFCOM). All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
-                                    Springs of Hope for Communities
+                                    Springs of Hope for Communities (SHOFCOM)
                                 </a>
                             </p>
                         </div>
