--- a/index.html
+++ b/index.html
@@ -490,6 +490,13 @@
     </section>
     <!-- End Testimonials Area -->
 
+    <div class="section-title">
+        <span>
+            <i class="flaticon-testimonial"></i>
+            OUR FOCUS
+        </span>
+        <!-- <h2>The foundation concept is inspired by two heart touching stories :</h2> -->
+    </div>
 
     <!-- Start Slider Area -->
     <div class="slider_area">
@@ -512,13 +519,7 @@
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
-                        <div class="tp-caption NotGeneric-Icon tp-resizeme" id="slide-3049-layer-8"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            OUR FOCUS
-                        </div>
+                    
 
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3049-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -526,16 +527,10 @@
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            MATHARE SLUM VALLEY
+                            MATHARE VALLEY SLUM
                         </div>
 
-                        <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3049-layer-4"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
+                    
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -568,9 +563,9 @@
                             data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            EVANGELICAL IMPACT
+                            EVANGELISM
                         </div>
-
+<!-- 
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
@@ -578,15 +573,15 @@
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             Access to the word of God.
-                        </div>
+                        </div> -->
 
-                        <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
+                        <!-- <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div>
+                        </div> -->
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
