--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
         <div class="huruma-nav">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo">
-                            <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image">
-                        </a>
-                        <span style="color: white; margin-left: 80px;">Springs of Hope for Communities ( SHOFCOM )</span>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/img/logo.png" class="white-logo" style="margin-bottom: 15px;" alt="logo">
+                        <img src="assets/img/logo.png" class="black-logo" style="margin-bottom: 15px;" alt="image">
+                    </a>
+                    <span style="color: white; margin-left: 80px;">Springs of Hope for Communities ( SHOFCOM )</span>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav">
@@ -343,42 +343,44 @@
     </div>
     <!-- End Sidebar Modal -->
 
-   <!-- Start Home Banner Three Area -->
-   <div class="home-banner-three home-banner-three-video">
-    <video loop="" muted="" autoplay="" poster="#" class="background-video">
-        <source src="assets/img/banner-video.mp4" type="video/mp4">
-    </video>
-    <div class="">
-        <div class="home-item">
-            <div class="d-table">
-                <div class="d-table-cell">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-lg-7">
-                                <div class="main-banner-content">
-                                    <span>Springs of Hope for Communities (SHOFCOM)</span>
-                                    <h4>The world has enough for all of us if we cared for ourselves and for each other.</h4>
-                                    <div class="banner-btn">
-                                        <a href="#" class="default-btn">
-                                            Donate Now
-                                            <i class="flaticon-right"></i>
-                                            <span></span>
-                                        </a>
-                                        <a class="optional-btn" href="#">
-                                            Become Member
-                                            <i class="flaticon-right"></i>
-                                        </a>
+    <!-- Start Home Banner Three Area -->
+    <div class="home-banner-three home-banner-three-video">
+        <video loop="" muted="" autoplay="" poster="#" class="background-video">
+            <source src="assets/img/banner-video.mp4" type="video/mp4">
+        </video>
+        <div class="">
+            <div class="home-item">
+                <div class="d-table">
+                    <div class="d-table-cell">
+                        <div class="container">
+                            <div class="row align-items-center">
+                                <div class="col-lg-7">
+                                    <div class="main-banner-content">
+                                        <span>Springs of Hope for Communities (SHOFCOM)</span>
+                                        <h4>The world has enough for all of us if we cared for ourselves and for each
+                                            other.</h4>
+                                        <div class="banner-btn">
+                                            <a href="#" class="default-btn">
+                                                Donate Now
+                                                <i class="flaticon-right"></i>
+                                                <span></span>
+                                            </a>
+                                            <a class="optional-btn" href="#">
+                                                Become Member
+                                                <i class="flaticon-right"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="col-lg-5">
-                                <div class="banner-bar">
-                                    <div class="banner-video">
-                                        <span>Watch Intro</span>
-                                        <a href="https://www.youtube.com/" class="video-btn popup-youtube">
-                                            <i class="bx bx-play"></i>
-                                        </a>
+                                <div class="col-lg-5">
+                                    <div class="banner-bar">
+                                        <div class="banner-video">
+                                            <span>Watch Intro</span>
+                                            <a href="https://www.youtube.com/" class="video-btn popup-youtube">
+                                                <i class="bx bx-play"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -388,8 +390,7 @@
             </div>
         </div>
     </div>
-</div>
-<!-- End Home Banner Three Area -->
+    <!-- End Home Banner Three Area -->
 
 
     <!-- Start Testimonials Area -->
@@ -495,7 +496,7 @@
             <i class="flaticon-testimonial"></i>
             OUR FOCUS
         </span>
-        <!-- <h2>The foundation concept is inspired by two heart touching stories :</h2> -->
+        <h2>The foundation concept is inspired by two heart touching stories :</h2>
     </div>
 
     <!-- Start Slider Area -->
@@ -509,7 +510,7 @@
                     <!-- SLIDE  -->
                     <li data-index="rs-3049" data-transition="zoomin" data-slotamount="7" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
-                        data-masterspeed="2000" data-thumb="assets/img/main-banner1.jpg" data-rotate="0"
+                        data-masterspeed="2000" data-thumb="assets/img/mathare.jpg" data-rotate="0"
                         data-saveperformance="off" data-title="First Slide" data-param1="" data-param2="" data-param3=""
                         data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                         data-param10="" data-description="">
@@ -519,7 +520,7 @@
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
-                    
+
 
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3049-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -530,7 +531,14 @@
                             MATHARE VALLEY SLUM
                         </div>
 
-                    
+
+                        <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
+                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
+                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
+                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
+                            <h2 style="color: white;">Transforming lives in  Mathare Valley Slum.</h2>
+                        </div>
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -547,11 +555,53 @@
                     <!-- SLIDE  -->
                     <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
-                        data-masterspeed="2000" data-thumb="assets/img/main-banner2.jpg" data-rotate="0"
+                        data-masterspeed="2000" data-thumb="assets/img/lion.jpg" data-rotate="0"
                         data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
                         data-saveperformance="off" data-title="Second Slide" data-param1="" data-param2=""
                         data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
                         data-param9="" data-param10="" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="assets/img/lion.jpg" alt="" data-bgposition="center center" data-kenburns="on"
+                            data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
+                            data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500" data-offsetend="0 -500"
+                            data-bgparallax="10" class="rev-slidebg" data-no-retina>
+
+                        <div class="tp-caption NotGeneric-Icon tp-resizeme" id="slide-3049-layer-8"
+                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
+                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
+                            data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
+                            THE MAASAI COMMUNITY
+                        </div>
+
+                        <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
+                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
+                            data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
+                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
+                            data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
+                            Empowering the Maasai Community.
+                        </div>
+
+                        <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
+                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                            data-y="['middle','middle','middle','middle']" data-voffset="['115','115','115','115']"
+                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
+                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
+                            <a href="#" class="default-btn">
+                                Donate Now
+                                <span></span>
+                            </a>
+                        </div>
+                    </li>
+                    <!-- SLIDE  -->
+                    <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
+                        data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
+                        data-masterspeed="2000" data-thumb="assets/img/20221113_145825.jpg" data-rotate="0"
+                        data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
+                        data-saveperformance="off" data-title="Third Slide" data-param1="" data-param2="" data-param3=""
+                        data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
+                        data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="assets/img/20221113_145825.jpg" alt="" data-bgposition="center center"
                             data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100"
@@ -565,23 +615,16 @@
                             data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             EVANGELISM
                         </div>
-<!-- 
+
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            Access to the word of God.
-                        </div> -->
+                            Ministration and spread of the Word.
+                        </div>
 
-                        <!-- <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </div> -->
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -615,7 +658,8 @@
                         <h3>Theory of Change (TOC)</h3>
 
                         <p>
-                            The foundation approach is informed by our theory of change (TOC) which takes the form of gradual, organic capacity building interventions in the form of
+                            The foundation approach is informed by our theory of change (TOC) which takes the form of
+                            gradual, organic capacity building interventions in the form of
                             provision of education to learners (education sponsorship program), protection of the
                             severely exposed children (children’s facility), developing and nurturing youth talent for
                             livelihoods(talent development and nurturing program), conducting advocacy on education for
@@ -1061,7 +1105,8 @@
                                 Copyright @
                                 <script data-cfasync="false"
                                     src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for Communities. All Rights
+                                <script>document.write(new Date().getFullYear())</script> Springs of Hope for
+                                Communities. All Rights
                                 Reserved by
                                 <a href="#" target="_blank">
                                     Springs of Hope for Communities
