remove the captions

--- a/index.html
+++ b/index.html
@@ -496,7 +496,6 @@
             <i class="flaticon-testimonial"></i>
             OUR FOCUS
         </span>
-        <h2>The foundation concept is inspired by two heart touching stories :</h2>
     </div>
 
     <!-- Start Slider Area -->
@@ -531,14 +530,14 @@
                             MATHARE VALLEY SLUM
                         </div>
 
-
+<!-- 
                         <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             <h2 style="color: white;">Transforming lives in  Mathare Valley Slum.</h2>
-                        </div>
+                        </div> -->
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -574,14 +573,14 @@
                             THE MAASAI COMMUNITY
                         </div>
 
-                        <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
+                        <!-- <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             Empowering the Maasai Community.
-                        </div>
+                        </div> -->
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -616,14 +615,14 @@
                             EVANGELISM
                         </div>
 
-                        <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
+                        <!-- <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
                             Ministration and spread of the Word.
-                        </div>
+                        </div> -->
 
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
