--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
                         data-param9="" data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="assets/img/lion.jpg" alt="" data-bgposition="center center" data-kenburns="on"
+                        <img src="assets/img/manyatta.jpg" alt="" data-bgposition="center center" data-kenburns="on"
                             data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500" data-offsetend="0 -500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
