fixes on the carousel

--- a/index.html
+++ b/index.html
@@ -518,21 +518,13 @@
                             data-duration="3000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 -500" data-offsetend="0 500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
-                        <!-- <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3049-layer-1"
+                        <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3049-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            MATHARE VALLEY SLUM
-                        </div> -->
-
-                        <div class="tp-caption NotGeneric-SubTitle tp-resizeme" id="slide-3045-layer-4"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['45','45','45','45']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            <h2 style="color: white;">Transforming lives in  Mathare Valley Slum.</h2>
+                            Transforming lives in  Mathare Valley Slum.
                         </div>
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
@@ -561,14 +553,6 @@
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500" data-offsetend="0 -500"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
-                        <!-- <div class="tp-caption NotGeneric-Icon tp-resizeme" id="slide-3049-layer-8"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            THE MAASAI COMMUNITY
-                        </div> -->
-
                         <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
@@ -592,34 +576,24 @@
                     <!-- SLIDE  -->
                     <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
-                        data-masterspeed="2000" data-thumb="assets/img/20221113_145825.jpg" data-rotate="0"
+                        data-masterspeed="2000" data-thumb="assets/img/lion.jpg" data-rotate="0"
                         data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
                         data-saveperformance="off" data-title="Third Slide" data-param1="" data-param2="" data-param3=""
                         data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9=""
                         data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="assets/img/20221113_145825.jpg" alt="" data-bgposition="center center"
+                        <img src="assets/img/lion.jpg" alt="" data-bgposition="center center"
                             data-kenburns="on" data-duration="7000" data-ease="Linear.easeNone" data-scalestart="100"
                             data-scaleend="120" data-rotatestart="0" data-rotateend="0" data-offsetstart="0 500"
                             data-offsetend="0 -500" data-bgparallax="10" class="rev-slidebg" data-no-retina>
-
-                        <div class="tp-caption NotGeneric-Icon tp-resizeme" id="slide-3049-layer-8"
-                            data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                            data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
-                            data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
-                            data-frames='[{"from":"x:[-105%];z:0;rX:0deg;rY:0deg;rZ:-90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            EVANGELISM
-                        </div>
-
-                        <!-- <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
+                            <div class="tp-caption NotGeneric-Title tp-resizeme" id="slide-3045-layer-1"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                             data-y="['middle','middle','middle','middle']" data-voffset="['-15','-15','-15','-15']"
                             data-fontsize="['70','70','70','45']" data-lineheight="['70','70','70','50']"
                             data-width="none" data-height="none" data-type="text" data-responsive_offset="on"
                             data-frames='[{"from":"x:[105%];z:0;rX:45deg;rY:0deg;rZ:90deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                            Ministration and spread of the Word.
-                        </div> -->
-
+                            Accessing education to the Maasai Community.
+                        </div>
 
                         <div class="tp-caption NotGeneric-btn tp-resizeme" id="slide-3045-layer-8"
                             data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
