--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     </section>
     <!-- End Testimonials Area -->
 
-    <div class="section-title">
+    <div class="section-title" style="margin-left: 100px;">
         <span>
             <i class="flaticon-testimonial"></i>
             OUR FOCUS
@@ -624,7 +624,7 @@
                             <i class="flaticon-care-about-plants"></i>
                             OUR APPROACH
                         </span>
-                        <h3>Theory of Change (TOC)</h3>
+                        <!-- <h3>Theory of Change (TOC)</h3> -->
 
                         <p>
                             The foundation approach is informed by our theory of change (TOC) which takes the form of
@@ -726,10 +726,10 @@
     <!-- Start Blog Area -->
     <section class="blog-section pt-100 pb-70">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title" >
                 <span>
                     <i class="flaticon-book"></i>
-                    OUR CORE VALUES
+                    FOUNDATIONS' FUNDAMENTAL STATEMENTS
                 </span>
             </div>
 
